feat(Changes in Entity framework): Changed in files

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@
 ################################################################################
 
 /CustomerOnBoardingBackend/.vs
-
+/CustomerOnBoardingBackend/.bin
+/CustomerOnBoardingBackend/.obj
