--- a/CustomerOnBoardingBackend/CustomerOnboardingApplication/CustomerOnboardingApplication.csproj
+++ b/CustomerOnBoardingBackend/CustomerOnboardingApplication/CustomerOnboardingApplication.csproj
@@ -7,6 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Controllers\CustomerFormDetailsController\**" />
+    <Content Remove="Controllers\CustomerFormDetailsController\**" />
+    <EmbeddedResource Remove="Controllers\CustomerFormDetailsController\**" />
+    <None Remove="Controllers\CustomerFormDetailsController\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="AutoMapper.Collection" Version="10.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.8">
@@ -14,10 +23,6 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Interfaces\" />
   </ItemGroup>
 
   <ItemGroup>
